tests/jastadd/negative/type_errors/L3/4_ProcScopeRules.ob
MODULE TestModule;
	PROCEDURE f(f : INTEGER);  (* OK *)
	BEGIN
		f                      (* NOT OK *)
	END f;
BEGIN
END TestModule.
